--- a/css/style.css
+++ b/css/style.css
@@ -4,11 +4,14 @@
 }
 
 input{
-  border: 1px solid #526e93;
+  border: 1px solid lightgray;
   border-radius: 3px;
 }
+input:focus{
+  outline-color: #4080b1;
+}
 .row{
-  height: 25px;
+  height: 30px;
 }
 .run-btn{
   line-height: 0rem;
@@ -20,7 +23,7 @@ input{
   border: 1px solid lightgray;
   border-radius: 3px;
   width: 100%;
-  height: 30px;
+  height: 40px;
 }
 
 .bar{
